# shacl-extractor

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  LICENSE  README.md  REUSE.toml  build_book.sh  fix_encoding.py  pyproject.toml  shapes-chadap.ttl  shapes.ttl  test_main.py
.github/workflows/: deploy-coverage.yml  deploy-docs.yml  pyright.yml  release.yml  reuse.yml  ruff.yml  tests.yml
context/: README.md  RELEASE-NOTES.md  index.md
context/scripts/: convert.py
context/ver/0.1.0/: skg-if.json
context/ver/0.1.0/samples/: example-agent.json  example-data-source.json  example-grant.json  example-research-product.json  example-topic.json  example-venue.json
context/ver/0.2.0/: skg-if.json
context/ver/1.0.0/: skg-if.json
data-model/: README.md  index.md
data-model/graphs/: skg-if-agent.graphml  skg-if-data-source.graphml  skg-if-grant.graphml  skg-if-research-product.graphml  skg-if-topic.graphml  skg-if-venue.graphml
data-model/ontology/1.0.0/: skg-o.nt  skg-o.ttl
data-model/ontology/current/: skg-o.html  skg-o.json  skg-o.xml
data-model/scripts/: create_ontology.py
docs/: 01-getting-started.md  02-annotation-syntax.md  03-input-modes.md  04-cli.md  _config.yml  _toc.yml  astro.config.mjs  intro.md  package-lock.json  package.json  watch_book.sh
docs/src/: content.config.ts
docs/src/content/docs/: index.mdx
presets/: skg-if-core.json
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_extension_ontology.py  test_helper_functions.py  test_modular_ontology.py  test_single_file_ontology.py  test_skgif_integration.py
(+22 files in other folders)
