[project]
name = "shacl-extractor"
version = "0.1.0"
description = "A Python tool to automatically generate SHACL shapes from OWL ontologies that follow the SKG-IF documentation pattern. The SKG-IF data model is documented at https://skg-if.github.io/data-model/."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.5.0",
]

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "pyshacl>=0.30.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project.scripts]
extractor = "src.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
